# rag-youtuber-lab-Abdulrahman-fahmi

./: .gitignore  README.md  api.py  function_app.py  gitignore  ingestion.py  pdfs_to_text.py  pyproject.toml  requirements.txt
backend/: constants.py  data_models.py  rag.py
data/: abessinier_(kattras).txt  bengalkatt.txt  maine_coon.txt  ragdoll_(kattras).txt
explorations/: explorations.ipynb
frontend/: app.py
knowledge_base/articles.lance/_transactions/: 0-4c3ca984-588d-4aad-9604-4991127900b8.txn  0-5c39b091-1bd8-497b-8209-56d2a2d6fae8.txn  0-c78614d7-e40f-4201-b43f-d713041b2b5c.txn  1-acf5c5f8-d9a2-4d8b-a9b2-644269da4225.txn  1-fcf67fad-7623-4e91-a206-52afd64aece6.txn  10-5835147b-b5b8-42f0-b3fd-82c7f13954c9.txn  10-cd42e8ad-4616-41ba-8962-175bb0a025b5.txn  100-740fe295-fb3b-420f-b96e-7fc2b9375d4c.txn  101-8a3855c4-26b5-41e5-9b0d-22a83586cb27.txn  102-75f48296-0cfc-4f8d-a62d-05b1a97f1940.txn  103-4547812c-34bb-471c-8405-f907b251ca66.txn  104-8d75a14f-18de-429a-a1b9-7d4d3563475d.txn  105-b2c9597f-2257-4b6d-90e5-0d195f41d795.txn  106-9a86240e-576c-45e0-afd3-6fbccc07507c.txn  11-421d7530-8828-401d-8f63-1062e00d5019.txn  11-4fa70b7c-df5b-434a-8327-4a40110cce56.txn  12-598e6f99-1e1f-4c75-adae-bf5d58834239.txn  12-92fb60e1-d370-4919-b776-acdcd59a2deb.txn  13-0eecafcc-46af-488f-bc20-869084b99e64.txn  13-a4d5041e-613f-47b6-8be5-8369d7ed54b0.txn  14-3e6698c0-5a9e-46c2-a77b-7ed5cfe87a0f.txn  14-a8e76953-6a94-483e-8c28-86d5f884d38c.txn  15-c0d7c276-eef6-4532-95eb-1a9065301990.txn  15-fec82cdc-4cbc-473c-b347-5f0f30dcbe80.txn  16-3316e167-ccdf-417c-aec3-1b78c863852a.txn  (+100 more)
(+107 files in other folders)
