[project]
name = "rag-youtuber-lab-abdulrahman-fahmi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.4",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "pandas>=2.3.3",
    "pydantic-ai>=1.32.0",
    "pypdf>=6.4.2",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
]
