[project]
name = "rag-youtuber-lab-abdulrahman-fahmi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-functions>=1.24.0",
    "chromadb>=1.4.0",
    "duckdb>=1.4.3",
    "fastapi>=0.124.4",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "lancedb>=0.25.3",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.6",
    "openai>=2.12.0",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.32.0",
    "pypdf>=6.4.2",
    "python-dotenv>=1.2.1",
    "pytube>=15.0.0",
    "streamlit>=1.52.1",
    "uvicorn>=0.38.0",
    "youtube-transcript-api>=1.2.3",
]
